# python-a2a

./: README.md  pyproject.toml  setup.py
docs/: index.rst
examples/applications_local_model/: app_client.py  config.json  openai_travel_planner.py  openai_travel_planner_zh.py
python_a2a/: __init__.py
python_a2a/agent_flow/models/: agent.py
python_a2a/server/llm/: openai.py
